app/scss/main.scss
@import "vars";
@import "typography";
@import "inputs";
@import "buttons";
@import "fonts";
@import "header";
@import "footer";

::-webkit-input-placeholder {
	color: lighten($text, 25%);
}
::-moz-placeholder {
	color: lighten($text, 25%);
}
:-ms-input-placeholder {


	color: lighten($text, 25%);
}
::-ms-input-placeholder {
	color: lighten($text, 25%);
}
::placeholder {
	color: lighten($text, 25%);
}
::-moz-selection {
	background-color: $accent;
	color: #fff;
}
::selection {
	background-color: $accent;
	color: #fff;
}
* {
	margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html, body {
	height: 100%;
}
body {
	font-size: 16px;
	font-weight: 300;
	min-width: 320px;
	position: relative;
	font-family: $default;
	color: $text;
	overflow-x: hidden;
	display: flex;
    flex-direction: column;
}

.main {
  flex: 1 0 auto;
  padding-top: 50px;
  position: relative;
}

img, svg {
	max-height: 100%;
	max-width: 100%;
	width: auto;
	height: auto;
}
input, button, textarea {
	outline: none;
	font-family: $default;
	&:focus {
		outline: none;
	}
}
input, textarea {
	padding: 10px;
}
textarea {
	resize: none;
}
ul {
	list-style: none;
}
a {
	text-decoration: none;
	color: inherit;
	@extend.animate;
	&:hover {
		text-decoration: none;
		color: inherit;
	}
}
h1, h2, h3, h4 {
	font-weight: inherit;
}

.animate {
	transition: all 0.3s ease;
}

.container {
  width: 100%;
  max-width: 1280px;
  margin: auto;
  padding-left: 24px;
  padding-right: 24px;
}

.flex-auto {
  flex: 1 1 auto;
  min-height: 0;
  min-width: 0;
}

.w-100 {
  width: 100%;
}

.w-75 {
  width: 75%;
}

.w-60 {
  width: 60%;
}

.w-50 {
  width: 50%;
}

.w-50-fix {
  width: 50%;
}

.w-40 {
  width: 40%;
}

.w-25 {
  width: 25%;
}

.flex {
  display: flex;
}

.flex-wrap {
  flex-wrap: wrap;
}

.flex-row {
  flex-direction: row;
}

.flex-column {
  flex-direction: column;
}

.justify-between {
  justify-content: space-between;
}

.justify-center {
  justify-content: center;
}

.align-center {
  align-items: center;
}

.text-center {
  text-align: center;
}

/////
.main-section {
  width: 70%;
  margin-right: 24px;
  background-color: white;
}

.aside {
  width: 30%;
  flex-shrink: 0;
  background-color: white;
}

.row-form {
  margin-right: -10px;
  margin-left: -10px;
}

.caret {
  font-size: 1.5rem;
  vertical-align: -0.25em;
  pointer-events: none;
  position: absolute;
  right: 16px;
  top: 50%;
  transform: translateY(-50%);
}

.card-header {
  padding: 24px;
  background-color: #f2f8fd;
}

.checkout-block {
  border-radius: .5rem;
  margin-bottom: 30px;
  .inner-wrapper {
    padding: 24px;
  }
}

.product-list {
  padding-top: 30px;
  li {
    margin-bottom: 16px;
    .price-col {
      line-height: 2.2em;
    }
    .checkbox-wrapper {
      width: 30px;
    }
    .product-image-wrapper {
      width: 100px;
      .product-image {
        max-width: 100%;
        height: auto;
      }
    }
    .delete-item {
      width: 32px;
      height: 32px;
      border: none;
      outline: none;
      background: none;
      font-size: 16px;
      cursor: pointer;
      border-radius: 50%;
      display: flex;
      align-items: center;
      justify-content: center;
      img {
        width: 50%;
        height: auto;
      }
      &:hover {
        background-color: $light-gray;
      }
    }
  }
}

.payment-block {
  .money-icon {
    display: flex;
    flex-shrink: 0;
    align-items: center;
    justify-content: center;
    margin-right: 10px;
    width: 48px;
    height: 48px;
    background-color: $bg;
    border-radius: 50%;
    img {
      width: 65%;
      height: auto;
    }
  }
}

.promo-code-block {
  cursor: pointer;
  .promo-wrapper {
    display: none;
  }
  .promo-wrapper.show {
    display: flex;
  }
}

.billing-address-section {
  display: none;
}

@media only screen and (min-width: 993px) {
  .sticky-p {
    position: sticky;
    top: 100px;
  }
}

@media only screen and (max-width: 992px) {
  .main-content {
    flex-direction: column;
    width: 700px;
    max-width: 100%;
    .main-section {
      width: 100%;
    }
    .aside {
      width: 100%;
      max-width: 100%;
    }
  }
  .row-form {
    flex-wrap: wrap;
    .w-50 {
      width: 100%;
    }
  }
}

@media only screen and (max-width: 768px) {
  .main {
    padding-top: 0;
  }
  .main-content {
    padding: 0;
    .checkout-block {
      border-radius: 0;
      margin-bottom: 0;
    }
    .inner-wrapper {
      padding: 16px;

    }
    .products-row {
      .product-list {
        .price-qty {
          flex-direction: column-reverse;
          text-align: right;
          align-items: flex-end;
        }
        .f5 {
          font-size: 12px;
        }
      }
    }
    .aside {
      position: fixed;
      bottom: 0;
      left: 0;
      z-index: 2;
      .checkout-block {
        margin-bottom: 0;
        box-shadow: none;
        .inner-wrapper {
          display: flex;
          flex-direction: column-reverse;
          padding-top: 0;
          padding-bottom: 0;
          .price-item {
            display: none;
          }
          .total-price {
            padding-bottom: 16px;
            justify-content: flex-end;
            p:last-child {
              padding-left: 10px;
            }
          }
        }
      }
    }
    .aside.show {
      position: relative;
      .checkout-block .inner-wrapper .price-item {
        display: flex;
      }
    }
  }
}

